# gimme-3d

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.2stage  config.test.toml  config.toml  makefile  models.txt  readme.md  request.json  request.txt  results-cache.txt  results-nocache.txt  todos.md
.cargo/: config.toml
.github/workflows/: rust.yaml
client/: .gitignore  go.mod  go.sum  main.go
client/pkg/request/: request.go
src/: camera.rs  error.rs  gltf.rs  img.rs  lib.rs  main.rs  mesh.rs  model.rs  object.rs  render.rs
src/antialias/: main.rs
src/cmd/: main.rs
src/collect/: mod.rs
src/convert/: main.rs
src/debug/: main.rs
src/download/: mod.rs
src/experiment/: main.rs
src/experiments/: webp.rs
src/fbx2gltf/: main.rs  mod.rs
src/orbit/: main.rs
src/parse/: main.rs
src/parse-fbx/: main.rs
src/preview/: main.rs
src/render/: main.rs
src/render2/: main.rs
src/render_file/: main.rs  mod.rs
src/server/: config.rs  debug.rs  logger.rs  main.rs  metrics.rs  mod.rs  request.rs  server.rs
testdata/: duvet-cover.gltf  iphone.gltf
