[package]
name = "rs3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "fbx2gltf"
path = "src/fbx2gltf/main.rs"

[[bin]]
name = "render"
path = "src/render/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "aa"
path = "src/antialias/main.rs"


[dependencies]
gltf = "1.4.0"
anyhow = "1.0.75"
clap = "4.4.11"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
three-d = { version = "0.16.3", features = ["headless"] }
three-d-asset = { version = "0.6.0", features = ["gltf", "png", "jpeg", "data-url", "reqwest"] }
nalgebra = "0.32.3"
warp = "0.3.6"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"
serde_json = "1.0.108"
env_logger = "0.10.1"
image = { version = "0.24.7", features = ["webp-encoder"] }
cgmath = "0.18.0"
thiserror = "1.0.56"
imageproc = "0.23.0"
resize = "0.8.3"
fast_image_resize = "2.7.3"
