[package]
name = "gimme_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "render"
path = "src/render_file/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "cmd"
path = "src/main.rs"

[[bin]]
name = "webp"
path = "src/experiments/webp.rs"

[[bin]]
name = "preview"
path = "src/debug/main.rs"



[dependencies]
gltf = "1.4.0"
anyhow = "1.0.75"
clap = "4.4.11"
tokio = { version = "1.35.0", features = ["rt", "rt-multi-thread", "macros"] }
three-d = { version = "0.16.3", features = ["headless"] }
three-d-asset = { version = "0.6.0", features = ["gltf", "png", "jpeg", "data-url", "reqwest"] }
nalgebra = "0.32.3"
warp = "0.3.6"
serde = { version = "1.0.193", features = ["derive"] }
log = "0.4.20"
serde_json = "1.0.108"
env_logger = "0.10.1"
image = { version = "0.24.7", features = ["webp-encoder"] }
cgmath = "0.18.0"
thiserror = "1.0.56"
futures-util = "0.3.30"
bytes = "1.5.0"
toml = "0.8.8"
reqwest = "0.11.23"
url = "2.5.0"
async-trait = { version = "0.1.77", features = [] }
indicatif = "0.17.7"
imageproc = "0.23.0"
